Spacing fixes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,6 +7,10 @@ body {
   font-size: 18px;
   color: $body-color;
   line-height: 1.75rem;
+
+  h1 {
+    line-height: 2.5rem;
+  }
 }
 
 @media (max-width: $elements-responsive-width) {
